# ucoslam

./: .gitignore  CMakeLists.txt  Changelog  PackageList.txt  README.txt
cmake/: compiler.cmake  dependencies.cmake
gui/: CMakeLists.txt
gui/cmake/: compiler.cmake
gui/tools/gparam/: encryptor.cpp
src/: CMakeLists.txt  imageparams.cpp  imageparams.h  map.cpp  map.h  ucoslam.cpp  ucoslam.h  ucoslamtypes.cpp  ucoslamtypes.h
src/basictypes/: misc.cpp  misc.h
src/featureextractors/: feature2dserializable.cpp  feature2dserializable.h  gridextractor.cpp
src/map_types/: frame.cpp  frame.h
src/optimization/: globaloptimizer_g2o.cpp  typesg2o.h
src/utils/: frameextractor.cpp  frameextractor.h  framematcher.cpp  loopdetector.cpp  loopdetector.h  mapinitializer.cpp  mapinitializer.h  mapmanager.cpp  mapmanager.h  markerdetector.cpp  markerdetector.h  system.cpp  system.h
ucoslam_wrapper/: CMakeLists.txt
ucoslam_wrapper/include/ucoslam_wrapper/: ucoslam_wrapper.h
ucoslam_wrapper/src/: ucoslam_wrapper.cpp
utils/: CMakeLists.txt  monocular_slam.cpp  ucoslam_fullba.cpp
